--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Set the default font to Helvetica */
 body {
     font-family: Helvetica, Arial, sans-serif;
+    text-align: center; /* Center all text */
 }
 
 /* Make headers bold */
